--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=product-manage
 server.servlet.session.tracking-modes=cookie
 session.setMaxInactiveInterval(1800); //1800초
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.session.store-type=redis
