feat: 상품 최솟값 설정(BindingResult)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=product-manage
 server.servlet.session.tracking-modes=cookie
 session.setMaxInactiveInterval(1800); //1800초
 
+spring.messages.basename=messages,errors
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.session.store-type=redis
