--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,17 @@ spring.messages.basename=messages,errors
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.session.store-type=redis
+
+# 서버 포트 설정
+server.port=8091
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/product_manage?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=^^lkh0218
+
+# JPA 설정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
